# vessel-be-with-contract

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml  discord.yml  smart-contract-tests.yml
backend/: .dockerignore  .env.example  API_DOCUMENTATION.md  API_TEST_REPORT.md  Cargo.toml  Dockerfile  fly.toml
backend/.sqlx/: query-e796f95a1d089ef8947e013c413937d2b25777eaf6863829723465db7b5b7ac5.json
backend/src/: config.rs  error.rs  main.rs
backend/src/database/: migrations.rs  mod.rs  postgres.rs  redis.rs
backend/src/handlers/: admin.rs  auth.rs  blockchain.rs  currency.rs  funding.rs  importer.rs  invoice.rs  mitra.rs  mod.rs  payment.rs  risk_questionnaire.rs  user.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: common.rs  currency.rs  funding.rs  importer_payment.rs  invoice.rs  kyc.rs  mitra.rs  mod.rs  otp.rs  risk_questionnaire.rs  transaction.rs  user.rs
backend/src/repository/: funding_repository.rs  importer_payment_repository.rs  invoice_repository.rs  kyc_repository.rs  mitra_repository.rs  mod.rs  otp_repository.rs  risk_questionnaire_repository.rs  transaction_repository.rs  user_repository.rs
backend/src/services/: auth_service.rs  blockchain_service.rs  currency_service.rs  email_service.rs  escrow_service.rs  funding_service.rs  invoice_service.rs  mitra_service.rs  mod.rs  otp_service.rs  payment_service.rs  pinata_service.rs  risk_questionnaire_service.rs
backend/src/services/tests/: auth_test.rs  funding_test.rs  mitra_test.rs  mod.rs  otp_test.rs
backend/src/utils/: hash.rs  jwt.rs  mod.rs  response.rs  validator.rs
smart-contract/: .env.example  .gitignore  hardhat.config.js  package-lock.json  package.json
smart-contract/scripts/: deploy.js  (+2 more)
(+26 files in other folders)
